# SheetsLLM

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: auth.py  billing.py  cache.py  config.py  db.py  engine.py  events.py  insights.py  jobs.py  main.py  recipes.py  security.py  sql_validator.py  storage.py  usage.py
backend/app/llm/: adapter.py  factory.py  gemini_client.py  openai_client.py  prompts.py
backend/app/routes/: __init__.py  audit.py  billing.py  chat.py  download.py  feedback.py  files.py  health.py  insights.py  jobs.py  recipes.py  reset.py  settings.py  transform.py  undo.py  upload.py  usage.py
backend/audits/dev/09f9eb7e-ec63-4c3a-bc89-980fe3e08972/: 20251010T144050.161387Z_b2ab2a74-2e14-4bb5-af71-662397b591f1.json  20251010T144219.197578Z_67580206-861e-426f-a498-43ea10c3caab.json  (+2 more)
backend/migrations/: 001_create_tables.sql  002_enable_rls.sql  003_create_usage.sql  004_create_recipes.sql  005_create_user_settings.sql  006_create_subscriptions.sql  007_create_events.sql  008_create_jobs.sql
backend/scripts/: activation_report.py  cleanup_data.py  funnel_report.py  generate_sample_datasets.py
backend/tests/: conftest.py  test_auth_local.py  test_billing.py  test_checkpoints.py  test_download.py  test_engine.py  test_events.py  test_files.py  test_jobs.py  test_llm_retry.py  test_pending_uploads.py  test_privacy.py  test_recipes.py  test_routes.py  test_security.py  test_sql_validator.py  test_usage.py
backend/tests/fixtures/: skills.md
(+145 files in other folders)
