[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.112.0",
  "uvicorn[standard]==0.30.5",
  "pydantic==2.8.2",
  "pandas==2.2.2",
  "python-multipart==0.0.9",
  "openpyxl==3.1.5",
  "numexpr==2.10.1",
  "orjson==3.10.7",
  "python-dotenv==1.0.1",
  "httpx==0.27.0"
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000

