[project]
name = "backend"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.112.0",
  "uvicorn[standard]==0.30.5",
  "pydantic==2.8.2",
  "python-multipart==0.0.9",
  "python-dotenv==1.0.1",
  "httpx==0.27.0",
  "orjson==3.10.7",
  # DuckDB + Parquet
  "duckdb>=1.1.0",
  "pyarrow>=17.0.0",
  # Supabase
  "supabase>=2.10.0",
  # Cloudflare R2 (S3-compatible)
  "boto3>=1.35.0",
  # LLM providers
  "openai>=1.50.0",
  "google-genai==1.56.0",
  # XLSX support (pandas fallback for multi-sheet)
  "pandas>=2.2.0",
  "openpyxl==3.1.5",
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000
